--- a/typo.html
+++ b/typo.html
@@ -1,44 +1,56 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Typographical conventions</title>
-<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-<link rel=stylesheet href=se.css>
-<link rel=prev href=attr.html title="Copyright and Attributions">
-<script src=docs.js></script>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <title>Typographical conventions</title>
+    <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel=stylesheet href=se.css>
+    <link rel=prev href=attr.html title="Copyright and Attributions">
+    <script src=docs.js></script>
+</head>
 
-<h1>Typographical conventions</h1>
+<body class="front">
+<div class="container-fluid">
 
-<h2>Capitalisation of titles</h2>
+    <h1>Typographical conventions</h1>
 
-<p>One should avoid title capitalisation,
- such as <i>A Very Fine Heading</i>,
- and instead go for <i>A very fine heading</i>.
- Gratutious capitalisation, or title case,
- often show a misunderstanding of – or a disregard for –
- orthographic conventions.
- We prefer what is known as <em>sentence case</em>,
- with a single initial capital to start headers.
+    <h2>Capitalisation of titles</h2>
 
-<h2>Line length</h2>
+    <p>One should avoid title capitalisation,
+     such as <i>A Very Fine Heading</i>,
+     and instead go for <i>A very fine heading</i>.
+     Gratutious capitalisation, or title case,
+     often show a misunderstanding of – or a disregard for –
+     orthographic conventions.
+     We prefer what is known as <em>sentence case</em>,
+     with a single initial capital to start headers.
 
-<p>When editing the documentation’s source,
- which is written in plain HTML,
- limit your line lengths to around 72 characters.
+    <h2>Line length</h2>
 
-<p>Some of us take this one step further
- and use what is called
- <a href=http://rhodesmill.org/brandon/2012/one-sentence-per-line/><em>semantic linefeeds</em></a>,
- which is a technique whereby the HTML source lines,
- which are not read by the public,
- are split at ‘natural breaks’ in the prose.
- In other words, sentences are split
- at natural breaks between clauses.
- Instead of fussing with the lines of each paragraph
- so that they all end near the right margin,
- linefeeds can be added anywhere
- that there is a break between ideas.
+    <p>When editing the documentation’s source,
+     which is written in plain HTML,
+     limit your line lengths to around 72 characters.
 
-<p>This can make diffs very easy to read
- when collaborating through git,
- but it is not something we enforce contributors to use.
+    <p>Some of us take this one step further
+     and use what is called
+     <a href=http://rhodesmill.org/brandon/2012/one-sentence-per-line/><em>semantic linefeeds</em></a>,
+     which is a technique whereby the HTML source lines,
+     which are not read by the public,
+     are split at ‘natural breaks’ in the prose.
+     In other words, sentences are split
+     at natural breaks between clauses.
+     Instead of fussing with the lines of each paragraph
+     so that they all end near the right margin,
+     linefeeds can be added anywhere
+     that there is a break between ideas.
+
+    <p>This can make diffs very easy to read
+     when collaborating through git,
+     but it is not something we enforce contributors to use.
+</div>
+</body>
