--- a/wd.html
+++ b/wd.html
@@ -42,6 +42,52 @@
   <a href="https://en.wikipedia.org/wiki/Same-origin_policy">single-host origin policy.</a>
 </ul>
 
+<h2>Understanding The Components</h2>
+
+
+<p>Building a test suite using WebDriver will require you to understand and effectively use a number of different components. As with everything in software, different people use different terms for the same idea. Below is a breakdown of how terms are used in this description.
+
+<h3>Terminology</h3>
+
+<ul>
+	<li><strong>API:</strong> Application Programming Interface. This is the set of "commands" you use to manipulate WebDriver.
+	<li><strong>Library:</strong> A code module which contains the APIs and the code necessary to implement them. Libraries are specific to each language binding, eg .jar files for Java, .dll files for .NET, etc.
+	<li><strong>Driver:</strong> Responsible for controlling the actual browser. Most drivers are created by the browser vendors themselves. Drivers are generally executable modules that run on the system with the browser itself, not on the system executing the test suite. (Although those may be the same system.) <em>NOTE: Some people refer to the drivers as proxies.</em>
+	<li><strong>Framework:</strong> An additional library used as a support for WebDriver suites. These frameworks may be test frameworks such as JUnit or NUnit. They may also be frameworks supporting natural language features such as Cucumber or Robotium. Frameworks may also be written and used for things such as manipulating or configuring the system under test, data creation, test oracles, etc.
+</ul>
+
+
+
+<h3>The Parts and Pieces</h3>
+<p>At its minimum, WebDriver talks to a browser through a driver. Communication is two way: WebDriver passes commands to the browser through the driver, and recieves information back via the same route. 
+</br>
+<img src="images/basic_comms.png" width="400px" style="float:none">
+
+<p>The driver is specific to the browser, such as ChromeDriver for Google's Chrome/Chromium, GeckoDriver for Mozilla's Firefox, etc. The driver runs on the same system as the browser. This may, or may not be, the same system where the tests themselves are executing.
+
+<p>This simple example above is <em>direct</em> communication. Communication to the browser may also be <em>remote</em> communication through Selenium Server or RemoteWebDriver. RemoteWebDriver runs on the same system as the driver and the browser.
+</br>
+
+<img src="images/remote_comms.png" width="400px" style="float:none">
+
+<p>Remote communication can also take place using Selenium Server or Selenium Grid, both of which in turn talk to the driver on the host system
+</br>
+<img src="images/remote_comms_server.png" width="400px" >
+
+
+<h3>Where Frameworks Fit In</h3>
+
+<p>WebDriver has one job and one job only: communicate with the browser via any of the methods above. WebDriver doesn't know a thing about testing: it doesn't know how to compare things, assert pass or fail, and it certainly doesn't know a thing about reporting or Given/When/Then grammar.
+
+<p>This is where various frameworks come in to play. At a minimum you'll need a test framework that matches the language bindings, eg NUnit for .NET, JUnit for Java, RSpec for Ruby, etc.
+
+<p>The test framework is responsible for running and executing your WebDriver and related steps in your tests. As such, you can think of it looking akin to the following image.
+
+</br>
+<img src="images/test_framework.png" width="400px" style="float:none">
+
+<p>Natural language frameworks/tools such as Cucumber may exist as part of that Test Framework box in the figure above, or they may wrap the Test Framework entirely in their own implementation.
+
 <h2>Driver requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
